  classes to make this possible.
- New "SendIcmpv6Redirect" attribute (and getter/setter functions) to 
  Ipv6L3Protocol. The behavior is similar to Linux's conf "send_redirects",
  i.e., enable/disable the ICMPv6 Redirect sending.
- An antenna module is now included, which includes different
  radiation pattern models. See the corresponding new section of the
  ns-3 models library documentation for details. 
   
Bugs fixed
----------
 - bug 962  - list of paths to reach objects contains bogus entries
 - bug 1313 - Stddev (average.h) returning NaN
 - bug 1319 - Fix Ipv6RawSocketImpl Icmpv6 filter
 - bug 1318 - Asserts for IPv6 malformed packets
 - bug 1339 - test.py uses the old name for the test runner
 - bug 1357 - IPv6 fragmentation fails due to checks about malformed extensions
 - bug 1378 - UdpEchoClient::SetFill () does not set packet size correctly
 - bug 1351 and 1333 - TCP not able to take RTT samples on long delay network
 - bug 1362 - ICMPv6 does not forward ICMPs to upper layers (and minor fixes to ICMPv6)
 - bug 1391 - .ns3rc does not allow comments as expected
 - bug 1392 - Modules built report does not clarify C++ or Python
 - bug 1395 - AODV DeferredRouteOutputTag missing constructor
 
Known issues
------------
In general, known issues are tracked on the project tracker available
at http://www.nsnam.org/bugzilla/

Release 3.13
==============

Availability
------------
This release is available from: 
http://www.nsnam.org/release/ns-allinone-3.13.tar.bz2

Supported platforms
-------------------
ns-3.13 has been tested on the following platforms.  Not all features are
available on all platforms; check the Installation page on the project wiki.

- Ubuntu 11.10 (32 bit) with g++-4.5.2
- Ubuntu 11.04 (32/64 bit) with g++-4.5.2 
- Ubuntu 10.04.3 LTS (64 bit) with g++-4.4.3, g++-3.4.6 
- OS X Lion with g++-4.2.1
- OS X Snow Leopard with g++-4.2.1 
- Fedora Core 16 (32/64 bit) with g++-4.6.2
  --  however, g++-3.4.6 fails on Fedora 16 i686 